Fixed search bar and layout issues.

--- a/server/public/css/image.scss
+++ b/server/public/css/image.scss
@@ -7,10 +7,6 @@
         display: none;
     }
 
-    .feature {
-        float: right;
-    }
-
     .info {
         .title {
             line-height: 1.3em;
