--- a/server/public/css/pipeline.scss
+++ b/server/public/css/pipeline.scss
@@ -98,20 +98,16 @@ a.disabled {
 }
 
 #header {
-
     background-color: #fff;
-    padding: 15px;
-    margin-bottom: 30px;
+    padding: 10px 0 20px 0;
+    margin-bottom: 20px;
     border-bottom: 1px solid #ccc;
-
     .title {
-
         margin: 0;
         padding: 0;
     }
 
     .description {
-
         font-size: 1em;
         margin: -0.2em 0;
         padding: 0;
@@ -120,46 +116,41 @@ a.disabled {
 
 
 .container {
+    .feature {
+        float: right;
+    }
 
     .omega {
         margin-left: 0;
-
         .info {
-            padding: 20px;
-            padding-top: 0;
+            padding: 0 20px;
         }
     }
 
     .most-pipelined {
-
         margin-bottom: 1.3em;
         overflow: auto;
-
         li {
-
-            font-family: 'Helvetica Neue Light', sans-serif;
             display: inline;
             margin: 0 0.5em 0 0;
             font-size: 1em;
             float: left;
+            span {
+                font-family: 'Helvetica Neue Light', sans-serif;
+            }
         }
     }
 
     .search {
-
         width: 190px;
         float: left;
         position: relative;
-
         .subreddit {
-
             display: inline;
             margin: 0;
-
         }
 
         input[type="submit"] {
-
             background: url("../images/search-sprite.png") no-repeat 0 9px;
             width: 20px;
             height: 100%;
@@ -174,7 +165,6 @@ a.disabled {
             top: 0;
 
             &:hover {
-
                 background-position: -20px 9px;
             }
         }
